Adding more error context in exceptions.